tests/testthat/invalid_sgf/more_illegal_square_brackets.sgf
(;SZ[19]FF[3]
PW[Yi Ch'ang-ho]
WR[9d]
PB[Ma Xiaochun]
BR[9d]
EV[3rd LG Cup Final]
RO[Game 2]
DT[1999-03-04]
PC[PC[Norakdang Room, Unhyeongung Royal Palace, Seoul]
KM[6.5]
RE[W+3.5]
US[GoGoD95]
;B[pd];W[dd];B[qp];W[dq];B[do];W[cm];B[cq];W[cr];B[cp];W[gq];B[br];W[dr]
;B[en];W[jq];B[gp];W[hq];B[ci];W[dj];B[dl];W[cj];B[cl];W[bj];B[bl];W[df]
;B[eh];W[ch];B[kq];W[jp];B[op];W[qj];B[ql];W[qf];B[qh];W[of];B[nd];W[rd]
;B[oh];W[qc];B[nf];W[rh];B[dc];W[ec];B[cd];W[cc];B[db];W[ce];B[bd];W[ed]
;B[eb];W[bc];B[fc];W[hc];B[fd];W[gb];B[fb];W[kd];B[be];W[bf];B[ef];W[dg]
;B[he];W[mc];B[nc];W[mb];B[rg];W[qg];B[ri];W[ph];B[qi];W[pi];B[rf];W[re]
;B[pj];W[oi];B[oj];W[ni];B[md];W[lf];B[lc];W[lb];B[kc];W[jc];B[ld];W[kb]
;B[ke];W[ie];B[kf];W[hf];B[gf];W[lg];B[kg];W[hd];B[ge];W[jd];B[lh];W[mg]
;B[le];W[qq];B[pq];W[rp];B[qo];W[qr];B[ro];W[nj];B[rj];W[ig];B[og];W[eg]
;B[fg];W[mh];B[pg];W[qe];B[pf];W[li];B[oe];W[hh];B[bb];W[ab];B[cb];W[ac]
;B[gh];W[sq];B[pb];W[qb];B[nb];W[pc];B[ib];W[hb];B[jb];W[ic];B[oc];W[rb]
;B[kp];W[ko];B[lo];W[ln];B[lp];W[mn];B[pr];W[rr];B[gj];W[ok];B[pk];W[pl]
;B[qk];W[om];B[kr];W[hk];B[hm];W[im];B[in];W[jm];B[hl];W[ik];B[gk];W[hi]
;B[kh];W[ki];B[jo];W[bs];B[kn];W[km];B[bq];W[jr];B[fq];W[fr];B[fp];W[hr]
;B[di];W[ei];B[dh];W[bi];B[fh];W[bg];B[ek];W[ps];B[os];W[qs];B[ma];W[ia]
;B[or];W[qm];B[rm];W[ho];B[ee];W[de];B[hn];W[io];B[go];W[gi];B[fi];W[ej]
;B[fj];W[on];B[qn];W[no];B[jh];W[ji];B[ih];W[ii];B[eq];W[er];B[np];W[dp]
;B[ep];W[jn];B[so];W[sp];B[ga];W[ja];B[la];W[hg];B[pa];W[sf];B[sh];W[mo]
;B[mp];W[ko];B[pm];W[ol];B[se];W[sd];B[pe];W[ar];B[aq];W[ks];B[ls];W[js]
;B[as];W[cs];B[qa];W[ra];B[pn];W[co];B[bo];W[cn];B[bn];W[il];B[hj];W[hp]
;B[dm];W[ij];B[oo];W[ak];B[al];W[bk];B[qd];W[mf];B[na];W[ka];B[nh];W[jf]
;B[me];W[sc];B[ba];W[ae];B[ar]
)
